--- a/concourse.yml
+++ b/concourse.yml
@@ -140,12 +140,18 @@ instance_groups:
         name: groundcrew
         properties:
           additional_resource_types:
-            - type: slack-notification
-              image: docker:///cfcommunity/slack-notification-resource
-            - type: cg-common
-              image: docker:///18fgsa/cg-common-resource
-            - type: 18f-bosh-deployment
-              image: docker:///18fgsa/bosh-deployment-resource
+            - name: slack-notification
+              type: docker-image
+              source:
+                repository: cfcommunity/slack-notification-resource
+            - name: 18f-bosh-deployment
+              type: docker-image
+              source:
+                repository: 18fgsa/bosh-deployment-resource
+            - name: cg-common
+              type: docker-image
+              source:
+                repository: 18fgsa/cg-common-resource
       - release: concourse
         name: baggageclaim
         properties: {}
